Trying to fix watch on mobile

--- a/styles/revengeMobile.css
+++ b/styles/revengeMobile.css
@@ -91,7 +91,7 @@ body {
     main {
         margin-left: auto;
         margin-right: auto;
-        padding: 5px;
+        padding: 5px 5px 5px 15px;
     }
 
     main ul {
